--- a/airlinereservationsys/src/main/java/com/mpp/airlinereservationsys/view/Login.form
+++ b/airlinereservationsys/src/main/java/com/mpp/airlinereservationsys/view/Login.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="642" height="457"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-9519376"/>
+    </properties>
     <border type="none"/>
     <children>
       <component id="dc2b6" class="javax.swing.JLabel" binding="usernameLabel">
@@ -45,6 +47,7 @@
           <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <background color="-9535760"/>
           <text value="Sign In"/>
         </properties>
       </component>
